Token stored in localstorage so the validation interceptor changed

--- a/backend/testcreator/src/main/webapp/index.html
+++ b/backend/testcreator/src/main/webapp/index.html
@@ -5,27 +5,6 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<h1>Classroom API'is</h1>
-	<ul>
-		<li>Create Classroom 
-				<ul>
-					<li><b>Method : POST</b></li>
-					<li>http://localhost:8080/testcreator-v1/api/create-test</li>
-					<li>request body <code>{classroomName}</span></li>
-					<li>Response : <code>{classroomId,classroomName,createdAt}</code></li>
-				</ul>
-		 </li>
-		 <li>
-		 	<li>Get Created Classrooms 
-		 		<ul>
-		 			<li><b>Method : GET</b></li>
-					<li>http://localhost:8080/testcreator-v1/api/created-classrooms</li>
-					<li>request body <code>{}</span></li>
-					<li>Response : <code>{Array of classroom objects}</code></li>
-		 		</ul>
-		 	</li>
-		 </li>
-	</ul>
-	<h1>Test API's</h1>
+<h1>Hello</h1>
 </body>
 </html>
